ReSharper.FSharp/test/data/parsing/errors/Expr - Yield - Seq 01.fs
return 123
       123
